--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,5 +13,11 @@ build-backend = "hatchling.build"
 [tool.hatch.build.targets.wheel]
 packages = ["src"]
 
+[dependency-groups]
+dev = [
+    "pytest>=8.3.4",
+    "ruff>=0.9.9",
+]
+
 [project.scripts]
 my-app = "src.scripts.main:main"
