--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,9 +1,12 @@
-lint:
-  runs-on: ubuntu-latest
-  steps:
-    - name: Checkout repo
-      uses: actions/checkout@v4
-    - name: Install dependencies
-      run: uv sync
-    - name: Lint
-      run: uv run ruff check .
+name: lint
+on: push
+jobs:
+  lint:
+    runs-on: ubuntu-latest  # Теперь `runs-on` внутри задания
+    steps:
+      - name: Checkout repo
+        uses: actions/checkout@v4
+      - name: Install dependencies
+        run: uv sync
+      - name: Lint
+        run: uv run ruff check .
