--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -2,7 +2,7 @@ name: lint
 on: push
 jobs:
   lint:
-    runs-on: ubuntu-latest  # Теперь `runs-on` внутри задания
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout repo
         uses: actions/checkout@v4
@@ -11,4 +11,4 @@ jobs:
       - name: Install dependencies
         run: uv sync
       - name: Lint
-        run: uv run ruff check .
+        run: make lint
